--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <!-- Custom styles for this template -->
     <link href="styles.css" rel="stylesheet" />
 
@@ -47,7 +46,6 @@
       referrerpolicy="no-referrer"
     />
 
-   
     <!-- CSS Style sheet -->
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -63,22 +61,31 @@
               src="Images/new-moon (1).png"
               alt=""
           /></a>
-          <a class="brand-name" href="">buffalo buddies <br> <span class="car-hire">Car Hire</span> </a>
+          <a class="brand-name" href=""
+            >buffalo buddies <br />
+            <span class="car-hire">Car Hire</span>
+          </a>
         </label>
 
         <ul class="nav-menu">
-          <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="cars.html">Cars</a>
+            <a id="home-link" class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="_blank">Services</a>
+            <a class="nav-link" id="cars-link" href="cars.html">Cars</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" id="services-link" href="services.html"
+              >Services</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="_blank">Contact</a>
+            <a class="nav-link" id="about-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="contact-link" href="contact.html"
+              >Contact</a
+            >
           </li>
         </ul>
         <div class="hamburger">
@@ -116,7 +123,7 @@
         </div>
       </div>
     </section>
-    <hr>
+    <hr />
     <footer>
       <div class="contact-us">
         <h3>Contact Us</h3>
@@ -139,6 +146,6 @@
         ></a>
       </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
