--- a/about.html
+++ b/about.html
@@ -66,18 +66,20 @@
           </label>
   
           <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="cars.html">Cars</a>
+              <a class="nav-link" id="home-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+              <a class="nav-link" id="cars-link" href="cars.html">Cars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" id="services-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact-us">Contact</a>
+              <a class="nav-link" id="about-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="contact-link" href="contact.html">Contact</a>
             </li>
           </ul>
           <div class="hamburger">
@@ -133,6 +135,6 @@
       ></a>
     </div>
   </footer>
-  <script src="index.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
