Add some home page background image and fix some issues arround

--- a/cars.html
+++ b/cars.html
@@ -97,64 +97,106 @@
     <section id="cars">
       <h2 class="section-header">Choose Your Perfect Ride!</h2>
 
-      <div class="grid-container">
-        <div class="grid-item">
-          <img src="Images/big1.jpg" alt="Product 1" />
-          <h3>Product 1</h3>
-          <p>Description of Product 1</p>
-          <h4>$19.99</h4>
+      <div class="car-listings">
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
         </div>
-        <div class="grid-item">
-          <img src="Images/big2.jpg" alt="Product 2" />
-          <h3>Product 2</h3>
-          <p>Description of Product 2</p>
-          <h4>$29.99</h4>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
         </div>
-        <div class="grid-item">
-          <img src="Images/big3.jpg" alt="Product 3" />
-          <h3>Product 3</h3>
-          <p>Description of Product 3</p>
-          <h4>$39.99</h4>
-        </div>
-
-        <div class="grid-item">
-          <img src="Images/big4.jpg" alt="Product 1" />
-          <h3>Product 1</h3>
-          <p>Description of Product 1</p>
-          <h4>$19.99</h4>
-        </div>
-        <div class="grid-item">
-          <img src="Images/big5.jpg" alt="Product 2" />
-          <h3>Product 2</h3>
-          <p>Description of Product 2</p>
-          <h4>$29.99</h4>
-        </div>
-        <div class="grid-item">
-          <img src="Images/big6.jpg" alt="Product 3" />
-          <h3>Product 3</h3>
-          <p>Description of Product 3</p>
-          <h4>K39.99/hr</h4>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
         </div>
 
-        <div class="grid-item">
-          <img src="Images/big7.jpg" alt="Product 1" />
-          <h3>Product 1</h3>
-          <p>Description of Product 1</p>
-          <h4>$19.99</h4>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
         </div>
-        <div class="grid-item">
-          <img src="Images/big8.jpg" alt="Product 2" />
-          <h3>Product 2</h3>
-          <p>Description of Product 2</p>
-          <h4>$29.99</h4>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
         </div>
-        <div class="grid-item">
-          <img src="Images/big9.jpg" alt="Product 3" />
-          <h3>Product 3</h3>
-          <p>Description of Product 3</p>
-          <h4>$39.99</h4>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
         </div>
-        <!-- Repeat the above three grid items to fill the grid -->
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        <div class="car-card">
+          <img src="Images/big2.jpg" alt="Car 2" />
+          <h3>Car Model 2</h3>
+          <p>Price: $XX/day</p>
+          <a href="#" class="btn">Rent Now</a>
+        </div>
+        
       </div>
     </section>
 
