Add more features on the home page

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- Flaticon Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css"
+    />
+
     <!-- CSS Style sheet -->
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -132,18 +138,16 @@
       </section>
       <hr />
 
-   
-
       <!-- Services Section -->
 
       <div class="services-heading">
-        <h1>Services</h1>
+        <div>
+          <h1>Services</h1>
+        </div>
         <div>
           <p>
-            Don't miss out on the opportunity to explore your destination at
-            your own pace. <br />
-            Give our services a try and let us take care of your mobility
-            requirements with professionalism and reliability.
+            Don't miss out on the opportunity to explore <br />
+            your destination at your own pace.
           </p>
         </div>
       </div>
@@ -154,21 +158,19 @@
             <h3>Car Hire</h3>
             <p>
               Choose from our extensive fleet of vehicles and enjoy flexible
-              rental options for any duration you need. Whether it's a day, a
-              week, or longer, we have the perfect car for your needs. 1
+              rental options for any duration you need.
             </p>
           </div>
         </div>
         <div class="box">
-          <img src="Images/car-keys3.jpg" alt="Image 2" />
           <div>
             <h3>Car Sale</h3>
             <p>
               Choose from our extensive fleet of vehicles and enjoy flexible
-              rental options for any duration you need. Whether it's a day, a
-              week, or longer, we have the perfect car for your needs. 2
+              rental options for any duration you need.
             </p>
           </div>
+          <img src="Images/car-keys3.jpg" alt="Image 2" />
         </div>
         <div class="box">
           <img src="Images/lubricants.jfif" alt="Image 1" />
@@ -176,40 +178,64 @@
             <h3>Lubricants</h3>
             <p>
               Choose from our extensive fleet of vehicles and enjoy flexible
-              rental options for any duration you need. Whether it's a day, a
-              week, or longer, we have the perfect car for your needs. 1
+              rental options for any duration you need.
             </p>
           </div>
         </div>
         <div class="box">
-          <img src="Images/car-wash4.jpg" alt="Image 2" />
           <div>
             <h3>Car Wash</h3>
             <p>
               Choose from our extensive fleet of vehicles and enjoy flexible
-              rental options for any duration you need. Whether it's a day, a
-              week, or longer, we have the perfect car for your needs.
+              rental options for any duration you need.
             </p>
           </div>
+          <img src="Images/car-wash4.jpg" alt="Image 2" />
         </div>
       </section>
       <hr />
 
       <!-- Why-Us Section -->
 
-      <div class="services-heading">
-        <h1>Why Choose Us</h1>
+      <div class="why-us-heading">
+        <div>
+          <h1>Why Choose Us</h1>
+        </div>
         <div>
           <p>
-            Don't miss out on the opportunity to explore your destination at
-            your own pace. <br />
-            Give our services a try and let us take care of your mobility
-            requirements with professionalism and reliability.
+            Don't miss out on the opportunity to <br>
+             explore your destination at your own pace.
           </p>
         </div>
       </div>
-      <section id="why-us">
 
+      <section id="why-us">
+        <div class="why-us-container">
+          <div class="why-us-box">
+            <img class="why-us-image" src="Images/online-booking.jpg" alt="" />
+            <div>
+              <h3>Easy online booking</h3>
+              <p>Brief Description</p>
+            </div>
+          </div>
+          <div class="why-us-box">
+            <img class="why-us-image" src="Images/cars.png" alt="" />
+            <h3>Variety of car brands</h3>
+            <p>Brief Description</p>
+          </div>
+          <div class="why-us-box">
+            <img class="why-us-image" src="Images/online-payment.jpg" alt="" />
+            <div>
+              <h3>Online payments</h3>
+              <p>Brief Description</p>
+            </div>
+          </div>
+          <div class="why-us-box">
+            <img class="why-us-image" src="Images/cars.png" alt="" />
+            <h3>Affordable Rates</h3>
+            <p>Brief Description</p>
+          </div>
+        </div>
       </section>
     </main>
 
