Add some features on home page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
           <a class="brand-name" href=""
             >buffalo buddies <br />
             <span class="car-hire">Car Hire</span><br />
-            <span class="head-line">"Guaranteed safety & comfort"</span>
           </a>
         </label>
 
@@ -203,8 +202,8 @@
         </div>
         <div>
           <p>
-            Don't miss out on the opportunity to <br>
-             explore your destination at your own pace.
+            Don't miss out on the opportunity to <br />
+            explore your destination at your own pace.
           </p>
         </div>
       </div>
@@ -212,27 +211,39 @@
       <section id="why-us">
         <div class="why-us-container">
           <div class="why-us-box">
-            <img class="why-us-image" src="Images/online-booking.jpg" alt="" />
+            <div class="img-box1">
+              <i class="fa-brands fa-facebook fa-4x"></i>
+            </div>
             <div>
-              <h3>Easy online booking</h3>
+              <h4>Easy online booking</h4>
               <p>Brief Description</p>
             </div>
           </div>
+
           <div class="why-us-box">
-            <img class="why-us-image" src="Images/cars.png" alt="" />
-            <h3>Variety of car brands</h3>
+            <div class="img-box">
+              <i class="fa-brands fa-facebook fa-4x"></i>
+            </div>
+            <h4>Variety of car brands</h4>
             <p>Brief Description</p>
           </div>
           <div class="why-us-box">
-            <img class="why-us-image" src="Images/online-payment.jpg" alt="" />
+            <div class="img-box1">
+              <i class="fa-brands fa-facebook fa-4x"></i>
+            </div>
+
+            <!-- <img class="why-us-image" src="Images/online-payment.jpg" alt="" /> -->
             <div>
-              <h3>Online payments</h3>
+              <h4>Online payments</h4>
               <p>Brief Description</p>
             </div>
           </div>
+
           <div class="why-us-box">
-            <img class="why-us-image" src="Images/cars.png" alt="" />
-            <h3>Affordable Rates</h3>
+            <div class="img-box">
+              <i class="fa-brands fa-facebook fa-4x"></i>
+            </div>
+            <h4>Affordable Rates</h4>
             <p>Brief Description</p>
           </div>
         </div>
